fix dark theme flickering

--- a/admin_panel/static/assets/css/main.css
+++ b/admin_panel/static/assets/css/main.css
@@ -128,6 +128,7 @@
 .login-text {
     text-align: center;
     margin: 10px;
+    color: var(--text-primary);
 }
 
 .remember-me-checkbox {
